--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
 
         <section class="fragment fragment-three">
-            <h3>Things I've Made</h3>
+            <h3>Project Creations/Code</h3>
             <hr class="title-underline">
             <div class="container carousel-container"></section>
 
@@ -220,7 +220,7 @@
                         <div class="carousel-item active">
 
                             <!--image here -->
-                            <img src="assets/images/nasa.jpg" class="d-block w-100" alt="...">
+                            <img src="assets/images/Lots 1-3.png" class="d-block w-100" alt="...">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5>First slide label</h5>
                                 <p></p>
@@ -232,7 +232,7 @@
                         <div class="carousel-item">
 
                             <!--image here -->
-                            <img src="assets/images/intro.png" class="d-block w-100" alt="...">
+                            <img src="assets/images/Web page.png" class="d-block w-100" alt="...">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5>Second slide label</h5>
                                 <p></p>
@@ -243,7 +243,7 @@
                         <div class="carousel-item">
 
                             <!--image here -->
-                            <img src="assets/images/nasa.jpg" class="d-block w-100" alt="...">
+                            <img src="assets/images/WeatherPy_travel_map_markers.png" class="d-block w-100" alt="...">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5>Third slide label</h5>
                                 <p></p>
@@ -263,11 +263,11 @@
             <hr class="title-underline">
             <div class="container">
                 <div class="labels">
-                    <div class="tech">Programming: Python (Numpy, Matplotlib, Pandas, Scixit-Learn, Keras), SQL, R, JavaScript, HTML, CSS</div>
+                    <div class="tech">Programming: Python (Numpy, Matplotlib, Pandas), SQL, R, JavaScript, HTML, CSS</div>
 
                     <div class="tech">Machine Learning: Linear Regression, Logistic Regression, Decision Trees, Random Forest</div>
 
-                    <div class="tech">Other: Stafisties Github, Data Visualisation,Postgres, MS Office, Tableau, Jupyter Notebook, AWS,
+                    <div class="tech">Other: Stafisties Github, Data Visualisation, Postgres, MS Office, Tableau, Jupyter Notebook, AWS,
                         Googie Cloud Platform</div>
 
                     <div class="tech">Estimating software: Bluebeam, Accubid, Accubid Database Manager, Live Count </div> 
