--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
                         <p>
                             This project was to build an interactive layered map using Leaflet.js API and using
                             a URL to populate the map with the most current data on earthquakes around the world.
-                            (last7days) The circles in the images are proportional to the magnitude of the earthquake 
-                            and each will display an informational popup. To suit user preference the background can
+                            (on a rolling 7 day timeline) The circles in the images are proportional to the magnitude of the earthquake 
+                            that will also display an informational popup. To suit user preference the background can
                             display three different styles and the user can add or drop any of the three data tabs 
                             for added interactivity.
                         </p>
@@ -182,12 +182,9 @@
                                 <h3>Improbable-Beef!</h3>
                                 <br>
                                 <p>
-                                    This project was a display of how to create and engaging and dynamic dashboard 
-                                    with our 'friend' Roza. By using web visualizations and Github Pages. With Github 
-                                    Pages we were able to build a web page that allows a user to interact with
-                                    our .json file without having to run their own local serve. Additionally this
-                                    dashboarded allowed for a quick way for one of Rozas volunteers to select their
-                                    anonymized ID from the dropdown menu in the browser to display information about their results.
+                                    This project was a display of how to create engaging and dynamic dashboards.                                   
+                                    The dashboard allows volunteers to select their anonymized ID from the dropdown 
+                                    menu in the browser to display their information about their results.
                                 </p>
                                 <a href="https://atomickilroy.github.io/Improbable-Beef/" class="btn"><i class="fab fa-github"></i> Live Demo</a>
                                 <!--<a href="#" class="btn"><i class="fas fa-tv"></i> </a>-->
