--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@
                     <section class="fragment fragment-two">
                     <h2> Seeking New <br />Opportunities </h2>
                         <p class="card-text">I am passionate about solving buisness problems, using Data Science & Machine Learning
-                            I systematically & creatively use my skillset to add tangible value to the team, the business
-                            and the end-user. I am constantly learning, and always looking to improve. 
+                             Adept at working independently and collaborating with teams across multiple functions to take information
+                            from a wide variety of sources and effectively break down concepts in layman terms to diverse audiences.
+                            I am constantly learning, and always looking to improve. 
                             <div class="col">                               
         
                                 <!--update these links to match your own social media profiles -->
