--- a/index.html
+++ b/index.html
@@ -2,23 +2,25 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <!-- Google Font -->
-    <link href="https://fonts.gstatic.com/s/roboto/v30/KFOlCnqEu92Fr1MmWUlfCxc4EsA.woff2) format('woff2'" rel="stylesheet">
+<!-- Google Font -->
+<link href="https://fonts.gstatic.com/s/roboto/v30/KFOlCnqEu92Fr1MmWUlfCxc4EsA.woff2) format('woff2')" rel="stylesheet">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+    <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
 
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+<!-- Bootstrap CSS -->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
 
-    <!-- Custom styles for this template -->
-    <link href="assets/css/app.css" rel="stylesheet" />
+<!-- Font Awesome -->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+
+<!-- Custom styles for this template -->
+<link href="assets/css/app.css" rel="stylesheet" />
     <title>Nathaniel Livingston | Portfolio</title>
 </head>
 
@@ -79,9 +81,8 @@
                     <section class="fragment fragment-two">
                     <h2> Seeking New <br />Opportunities </h2>
                         <p class="card-text">I am passionate about solving buisness problems, using Data Science & Machine Learning
-                             Adept at working independently and collaborating with teams across multiple functions to take information
-                            from a wide variety of sources and effectively break down concepts in layman terms to diverse audiences.
-                            I am constantly learning, and always looking to improve. 
+                            I systematically & creatively use my skillset to add tangible value to the team, the business
+                            and the end-user. I am constantly learning, and always looking to improve. 
                             <div class="col">                               
         
                                 <!--update these links to match your own social media profiles -->
@@ -118,8 +119,8 @@
                         <p>
                             This project was to build an interactive layered map using Leaflet.js API and using
                             a URL to populate the map with the most current data on earthquakes around the world.
-                            (on a rolling 7 day timeline) The circles in the images are proportional to the magnitude of the earthquake 
-                            that will also display an informational popup. To suit user preference the background can
+                            (last7days) The circles in the images are proportional to the magnitude of the earthquake 
+                            and each will display an informational popup. To suit user preference the background can
                             display three different styles and the user can add or drop any of the three data tabs 
                             for added interactivity.
                         </p>
@@ -183,9 +184,12 @@
                                 <h3>Improbable-Beef!</h3>
                                 <br>
                                 <p>
-                                    This project was a display of how to create engaging and dynamic dashboards.                                   
-                                    The dashboard allows volunteers to select their anonymized ID from the dropdown 
-                                    menu in the browser to display their information about their results.
+                                    This project was a display of how to create and engaging and dynamic dashboard 
+                                    with our 'friend' Roza. By using web visualizations and Github Pages. With Github 
+                                    Pages we were able to build a web page that allows a user to interact with
+                                    our .json file without having to run their own local serve. Additionally this
+                                    dashboarded allowed for a quick way for one of Rozas volunteers to select their
+                                    anonymized ID from the dropdown menu in the browser to display information about their results.
                                 </p>
                                 <a href="https://atomickilroy.github.io/Improbable-Beef/" class="btn"><i class="fab fa-github"></i> Live Demo</a>
                                 <!--<a href="#" class="btn"><i class="fas fa-tv"></i> </a>-->
@@ -261,11 +265,11 @@
             <hr class="title-underline">
             <div class="container">
                 <div class="labels">
-                    <div class="tech">Programming: Python (Numpy, Matplotlib, Pandas), SQL, R, JavaScript, HTML, CSS</div>
+                    <div class="tech">Programming: Python (Numpy, Matplotlib, Pandas, Scixit-Learn, Keras), SQL, R, JavaScript, HTML, CSS</div>
 
                     <div class="tech">Machine Learning: Linear Regression, Logistic Regression, Decision Trees, Random Forest</div>
 
-                    <div class="tech">Other: Stafisties Github, Data Visualisation, Postgres, MS Office, Tableau, Jupyter Notebook, AWS,
+                    <div class="tech">Other: Stafisties Github, Data Visualisation,Postgres, MS Office, Tableau, Jupyter Notebook, AWS,
                         Googie Cloud Platform</div>
 
                     <div class="tech">Estimating software: Bluebeam, Accubid, Accubid Database Manager, Live Count </div> 
